# shadowsocks-windows-gui-rust

./: .gitignore  Cargo.toml  README.md  build.rs  russ.json
.github/workflows/: rust.yml
res/: resources.rc
src/: client.rs  config.rs  dialog.rs  main.rs  utils.rs
