[package]
name = "russ"
version = "0.1.0"
edition = "2018"
description = "Shadowsocks GUI"
license = "MIT"
build = "build.rs"

[[bin]]
name = "russ"
path = "src/main.rs"

[dependencies]
native-windows-gui = { git = "https://github.com/gabdube/native-windows-gui.git", branch = "master", features = [ "all" ] }
native-windows-derive = { git = "https://github.com/gabdube/native-windows-gui.git", branch = "master" }

winapi = { version = "0.3", features = ["winuser", "wingdi"] }
winreg = "0.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

anyhow = "1.0"
log = "0.4"

futures = "0.3"
tokio = { version = "1", features = ["full"] }

shadowsocks = { git = "https://github.com/shadowsocks/shadowsocks-rust.git", branch = "master" }
shadowsocks-service = { git = "https://github.com/shadowsocks/shadowsocks-rust.git", branch = "master", features = ["local"] }

[build-dependencies]
embed-resource = "1.3"
winapi-build = "0.1.1"
