[package]
name = "russ"
version = "0.1.1"
edition = "2018"
description = "Shadowsocks GUI"
license = "MIT"
build = "build.rs"

[[bin]]
name = "russ"
path = "src/main.rs"

[dependencies]
native-windows-gui = { git = "https://github.com/gabdube/native-windows-gui.git", branch = "master", features = [ "all" ] }
native-windows-derive = { git = "https://github.com/gabdube/native-windows-gui.git", branch = "master" }

winapi = { version = "0.3.9", features = ["winuser", "wingdi"] }
winreg = "0.8.0"

serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
serde_derive = "1.0.118"

anyhow = "1.0.37"
log = "0.4.11"
log4rs = "1.0"

futures = "0.3.8"
tokio = { version = "1.0.1", features = ["full"] }

shadowsocks = { git = "https://github.com/shadowsocks/shadowsocks-rust.git", branch = "master" }
shadowsocks-service = { git = "https://github.com/shadowsocks/shadowsocks-rust.git", branch = "master", features = ["local"] }

[build-dependencies]
winapi = "0.3.9"
winres = "0.1.11"

[package.metadata.winres]
OriginalFilename = "russ.exe"
LegalCopyright = "Open Source MIT"
